<resources>
    <string name="app_name">PWSZ Włocławek</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="terminarz">Timetable</string>
    <string name="dodajnowy">Add event</string>
    <string name="zmienhaslo">Change password</string>
    <string name="potwierdzzmiane">Confirm change</string>
    <string name="potwierdzrejestracje">Confirm password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="home">Home</string>
    <string name="titlehome">Home</string>
    <string name="schoolplantabbed">Building plan</string>
    <string name="end">The end</string>
    <string name="tokenInfo">Token has been send on mail :(index@pwsz.wloclawek.pl)</string>
    <string name="token">Token</string>
    <string name="plan">Lesson Plan</string>
    <string name="zmien">Change password</string>
    <string name="niepam">Forgot your password?</string>
    <string name="ustawdate">Set date</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Index number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Repeat password</string>
    <string name="kierunek">Direction</string>
    <string name="action_sign_in">Log In</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">Index number is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_passwordOrpassword">Login or password is incorrect</string>
    <string name="error_takiesame">Passwords are different</string>
    <string name="ladowanie">Loading ...</string>
    <string name="wybGrupaL">Select a laboratory ...</string>
    <string name="wybGrupaW">Select a lecture...</string>
    <string name="wybPromo">Select promoter ...</string>
    <string name="wybKier">Select direction ...</string>
    <string name="wybSpec">Select specialty ...</string>
    <string name="wybRok">Select year of study ...</string>
    <string name="selectlanguage">Select language</string>
    <string name="selectplace">Select place</string>
    <string name="currentlessons">Current lessons</string>
    <string name="nextlessons">Next lessons</string>
    <string name="news">News</string>

    <string name="basement">Basement</string>
    <string name="groundfloor">Ground floor</string>
    <string name="Ifloor">I floor</string>
    <string name="IIfloor">II floor</string>
    <string name="IIIfloor">III floor</string>
    <string name="IVfloor">IV floor</string>
    <string name="radio1">type normal</string>
    <string name="radio2">type of satellite</string>
    <string name="groundfloor_zawisle">Ground floor</string>
    <string name="Ifloor_zawisle">I floor</string>
    <string name="IIfloor_zawisle">II floor</string>
    <string name="groundfloor2_zawisle">Ground floor - student house</string>


    <string name="schedule">Schedule</string>
    <string name="timetable">Timetable</string>
    <string name="wheniarrive">Location</string>
    <string name="planbuildings">Buildings plan</string>
    <string name="information">Information</string>
    <string name="contact">Contact</string>
    <string name="logout">Log out</string>

    <string name="sala">room</string>
    <string name="powiadomienia">Timetable change notification</string>

    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_school_plan_tabbed">SchoolPlanTabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_change_conf">ChangeConf</string>
    <string name="title_activity_contact_tabbed">Contact</string>
    <string name="title_activity_information_tabbed">Information</string>





    <string name="brakinternetu">No internet connection</string>
    <string name="blednytoken">Wrong token</string>
    <string name="error">Error</string>
    <string name="toastaccount">There is already an account with that index number.</string>
    <string name="sesja">Session</string>
    <string name="dyzury">Office Hours</string>
    <string name="organizacja">Organization of the year</string>
    <string name="brak">No lessons</string>
    <string name="loading">Loading ...</string>
    <string name="close">Close</string>
    <string name="addNotification">There was a change of plan!</string>
    <string name="addNotification2">Change of plan on PWSZ Wloclawek</string>
    <string name="brakzajec">No lessons</string>
</resources>
