<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_school_plan_zawisle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBack"
    tools:context="pl.wloclawek.pwsz.pwszwocawek.SchoolPlan_zawisle">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrolllinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:text="@string/groundfloor2_zawisle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/textColorPrimary"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/studenthause"

                />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="110dp"
                card_view:cardCornerRadius="0dp">



                <ImageView
                    android:layout_width="match_parent"
                    android:id="@+id/imgstudenthause"
                    android:layout_height="match_parent"

                    />


            </android.support.v7.widget.CardView>

            <Button
                android:text="@string/groundfloor_zawisle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/studenthause"
                android:textColor="@color/textColorPrimary"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/groundfloor"
                />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="110dp"
                card_view:cardCornerRadius="0dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imggroundfloor"
/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:text="@string/Ifloor_zawisle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/textColorPrimary"
                android:layout_below="@+id/groundfloor"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="1dp"
                android:id="@+id/Ifloor"
                />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="110dp"
                card_view:cardCornerRadius="0dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgIfloor"
/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:text="@string/IIfloor_zawisle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/Ifloor"
                android:textColor="@color/textColorPrimary"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="1dp"
                android:id="@+id/IIfloor"
                />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="110dp"
                card_view:cardCornerRadius="0dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/imgIIfloor"
/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
