<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.wloclawek.pwsz.pwszwocawek.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#a8a8a8"
        android:text="@string/currentlessons"
        android:textSize="16dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="80dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/zajecieNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Kryptografia "
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/godzinaNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="15:00 - 16:00"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="220dp" />

            <TextView
                android:id="@+id/typsalaNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Wykład, Sala 304"
                android:layout_below="@+id/zajecieNow"
                android:layout_alignStart="@+id/zajecieNow" />

            <TextView
            android:id="@+id/dzienNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17.10.2016"
            android:layout_alignStart="@+id/godzinaNow"
            android:layout_alignBottom="@+id/typsalaNow" />

            <TextView
                android:id="@+id/wykNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ladowanie"
                android:layout_below="@+id/typsalaNow"
                android:layout_alignStart="@+id/typsalaNow" />
            <TextView
                android:id="@+id/etaNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ETA: 5 dni"
                android:layout_below="@+id/dzienNow"
                android:layout_alignStart="@+id/dzienNow" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#a8a8a8"
        android:text="@string/nextlessons"
        android:textSize="16dp"
        android:layout_marginTop="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view5"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="140dp"
        android:layout_height="80dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/zajecieNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Kryptografia"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/godzinyNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="18:00 - 19:00"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="220dp" />

            <TextView
                android:id="@+id/typsalaNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Laboratorium, Sala 302"
                android:layout_below="@+id/zajecieNext"
                android:layout_alignStart="@+id/zajecieNext" />
            <TextView
                android:id="@+id/dzienNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="17.10.2016"
                android:layout_below="@+id/godzinyNext"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="227dp" />
            <TextView
                android:id="@+id/wykNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ladowanie"
                android:layout_below="@+id/typsalaNext"
                android:layout_alignStart="@+id/typsalaNext" />

            <TextView
                android:id="@+id/etaNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ETA: 5 dni"
                android:layout_below="@+id/dzienNext"
                android:layout_alignStart="@+id/dzienNext" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView467"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#a8a8a8"
        android:text="@string/news"
        android:textSize="16dp"
        android:layout_marginTop="228dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view6"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_marginTop="250dp"
    android:layout_height="220dp"
    card_view:cardCornerRadius="4dp"
    >

    <ListView
        android:id="@+id/listView13"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="7px">
    </ListView>
</android.support.v7.widget.CardView>


</RelativeLayout>


